exports[`mcfunction argument parser > minecraft:operation > Parse '<' 1`] = `
{
  "node": {
    "type": "literal",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": "<"
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:operation > Parse '=' 1`] = `
{
  "node": {
    "type": "literal",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": "="
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:operation > Parse '>' 1`] = `
{
  "node": {
    "type": "literal",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": ">"
  },
  "errors": []
}
`;
